# Plan-Mensual-Comidas

./: .gitignore  .pre-commit-config.yaml  CLEANUP_PLAN.md  CLEANUP_SUMMARY.md  LICENSE  Makefile  README.md  curse chat 1e7498643b6280d3b7c2ca1052b7811c.md  documentation.md  llm-context.md  llm-integration.md  main.py  migration.md  mypy.ini  notion-refactor.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.cursor/: techdoc.mdc
.cursor/rules/: README.md  RULES_ANALYSIS.md  configuration-management.json  content-management.json  contextual-analysis.json  data-pipeline.json  decision-documentation.json  decision-review-process.json  development-practices.json  documentation-creation.json  documentation.mdc  error-handling-consistency.json  file-management.json  git.json  issue-resolution-tracking.json  llm-integration-testing.json  llm-integration.json  llm-usage-policy.json  performance.json  plandoc.mdc  project-tracking.json  project.json  python.json  spanish-localization.json  workflow.json
.github/workflows/: ci.yml
V1/: Plan_Mensual_de_Comidas.py  crear_recetas.py  utils.py
V1.2/: Plan_Mensual_de_Comidas.py  normalizador_recetas.py
V1.3/: README.md
V1.3/core/: gestor.py  logger.py  normalizador_recetas.py  procesar_recetas.py
V1.3/tests/: test_gestor.py  test_normalizador_recetas.py  test_procesar_recetas.py
V1.4/: changelog.txt  notion_v1_4.md  pytest.ini  resumen.txt  zip_proyecto.py
V1.4/core/: extraer_ocr.py  gestor.py  notificaciones.py
V1.4/tests/: test_extraer_pdf.py  test_extraer_txt.py  test_gestor.py  test_metadatos_recetas.py  test_normalizador_recetas.py  test_parser_integration.py  test_procesar_recetas.py
archive/migration/: fix_pydantic_v2.py
commands/: cli.py
config/testing/: mypy.ini  pytest.ini
core/: __init__.py  cli.py  config.py  extraer_ocr.py  extraer_pdf.py  extraer_txt.py  generar_md.py  gestor.py  logger.py  metadatos_recetas.py  normalizador_recetas.py  notificaciones.py  notion_sync.py  procesar_recetas.py  test_hooks.py
core/application/: __init__.py
core/config/: __init__.py  loader.py  logging.py  settings.py
core/domain/: __init__.py
core/exceptions/: __init__.py  config.py  infrastructure.py
core/extraction/: interface.py  ocr.py  pdf.py  text.py
core/infrastructure/: __init__.py
core/notion/: client.py  errors.py  models.py  sync.py
core/recipe/: processor.py
core/utils/: config.py  logger.py  performance.py
docs/: CHANGELOG-RECENT.md  automation-improvements.md  development.md  directory-structure.md  llm.md  notion.md  roadmap.md  user-guide.md  validation-report.md
docs/features/: pantry-management.md  shopping-lists.md
docs/issues/: 2024-06-07-test-foundation-repair.md
docs/llm/: context.md
docs/tools/: README.md  api_docs.py  diagram_generator.py  doc_automation.py  glossary_generator.py  requirements.txt  run_automation.py
recetas/sin_procesar/: receta_compleja_para_test.txt  test_02_fractions_ranges.txt  test_03_missing_metadata.txt  test_04_mixed_languages.txt  test_06_standard_url.txt  test_08_nonstandard_source.txt  test_11_mixed_units.txt
scripts/: README.md  cleanup_logs.sh  manage_scripts.py  performance.py  performance_monitor.py  run_integration_tests.sh  test_docs.py
tests/: README.md  test_parser_unit.py  test_receta.py
(+160 files in other folders)
