[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plan-mensual-comidas"
version = "0.1.0"
description = "A meal planning application"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "Ana Vasquez" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.24.0",
    "openai>=1.0.0",
    "notion-client>=2.0.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/anavasquez/plan-mensual-comidas"
Documentation = "https://github.com/anavasquez/plan-mensual-comidas#readme"
Repository = "https://github.com/anavasquez/plan-mensual-comidas.git"
Issues = "https://github.com/anavasquez/plan-mensual-comidas/issues"

[tool.black]
line-length = 88
target-version = ["py39"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = false
warn_unused_configs = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
disallow_untyped_decorators = false
no_implicit_optional = false
warn_redundant_casts = false
warn_unused_ignores = false
warn_no_return = false
warn_unreachable = false
ignore_missing_imports = true
follow_imports = "silent"
show_error_codes = false

[[tool.mypy.overrides]]
module = [
    "PIL.*",
    "pdf2image.*", 
    "pdfplumber.*",
    "pytesseract.*",
    "notion_client.*",
    "yaml.*",
    "markdown.*",
    "dateutil.*"
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "unit: Unit tests",
    "integration: Integration tests", 
    "slow: Tests that take longer to run",
    "notion: Tests that require Notion API",
    "llm: Tests that require LLM API",
    "performance: Performance tests that measure timing",
    "e2e: marks tests as end-to-end tests",
    "phi: marks tests as phi model tests"
]
addopts = [
    "--verbose",
    "--cov=core",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--no-cov-on-fail",
    "--strict-markers",
    "-ra"
]

[tool.ruff]
line-length = 88
target-version = "py39"
select = ["E", "F", "B", "I"]
ignore = []

[tool.ruff.isort]
known-first-party = ["core"]

[tool.flake8]
max-line-length = 88
ignore = ["E501", "W503", "F541"]
exclude = [
    "__pycache__",
    ".git",
    ".venv",
    "venv",
    "migrations"
] 